# bookworm

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/bookworm/: __init__.py  base.py  cluster_method.py  embedding.py  processing.py  remote.py  types.py
src/bookworm/server/: client.py  remote.py  requests.py
src/bookworm/services/: embedding_service.py
tests/integration/: test_embed_cluster.py  test_process_embed.py
tests/unit/: test_cluster.py  test_embedder.py  test_processor.py
