[project]
name = "bookworm"
version = "0.1.0"
description = "Research agent for interpreting unstructured data."
readme = "README.md"
authors = [
    { name = "Maxwell Margenot", email = "max.margenot@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "transformers>=5.3.0",
]

[project.scripts]
bookworm = "bookworm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
remote = [
    "modal>=1.4.0",
]

[tool.ruff]
line-length = 79
